<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            style="@style/TextViewStyle"
            android:id="@+id/podaciPrihoda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="20sp"
            android:layout_gravity="center|top"
            android:text="@string/podaci_o_prihodu_rashodu_edit"
            />


        <EditText
            android:id="@+id/naslovEdit"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="40dp"
            android:layout_gravity="left"
            android:textSize="20sp"
            android:hint="@string/naslov_edit"
            android:inputType="text"/>
        <EditText
            android:id="@+id/kolicinaEdit"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="40dp"
            android:layout_gravity="left"
            android:textSize="20sp"
            android:hint="@string/kolicina_edit"
            android:inputType="text"/>

        <TextView
            style="@style/TextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="30dp"
            android:textSize="20sp"
            android:text="@string/opis_edit_ras_pri"
            />


            <EditText
                style="@style/TextViewStyle"
                android:id="@+id/opisEdit"
                android:layout_width="250dp"
                android:layout_height="100dp"
                android:background="@drawable/border"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="40dp"
                android:layout_gravity="left"
                android:textSize="20sp"
                android:gravity="top"
                android:paddingTop="20dp"
                android:paddingLeft="20dp"
                android:hint="@string/opis_edit"
                android:inputType="text"/>


        <ImageView
            android:id="@+id/btnMicEdit"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="20dp"
            style="@style/ImageViewStyle"
            android:src="@drawable/ic_mic"
            android:visibility="gone"/>

        <ImageView
            android:id="@+id/btnRecordingEdit"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_mic"
            android:visibility="gone"
            app:tint="@android:color/holo_red_light" />
    </LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:gravity="center"
    android:orientation="horizontal">
        <Button
            android:id="@+id/odustaniEdit"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="0dp"
            android:layout_gravity="left"
             android:text="@string/odustani_edit"/>

    <Button
        android:id="@+id/izmeniBtnEdit"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="30dp"
        android:layout_gravity="left"
        android:text="@string/izmeni_edit"/>

</LinearLayout>


</LinearLayout>