<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:orientation="vertical">
        <TextView
            style="@style/TextViewStyle"
            android:id="@+id/podaciKorisnika"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/podaci_o_korisniku" />


        <ImageView
            style="@style/ImageViewStyle"
            android:id="@+id/dolarSlika"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/dolar"
            />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            style="@style/TextViewStyle"
            android:id="@+id/imeUser"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:layout_marginLeft="60dp"
            android:textSize="20sp"
            android:text="@string/ime"/>
        <EditText
            android:id="@+id/imeEdit"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:textSize="20sp"
            android:inputType="text"
           />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            style="@style/TextViewStyle"
            android:id="@+id/prezimeUser"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:layout_marginLeft="60dp"
            android:textSize="20sp"
            android:text="@string/prezime"/>
        <EditText
            android:id="@+id/prezimeEdit"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:textSize="20sp"
            android:inputType="text"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            style="@style/TextViewStyle"
            android:id="@+id/bankaUser"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:layout_marginLeft="60dp"
            android:textSize="20sp"
            android:text="@string/banka"/>
        <EditText
            android:id="@+id/bankaEdit"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:textSize="20sp"
            android:inputType="text"
            />
    </LinearLayout>

        <Button
            android:id="@+id/izmeniEdit"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="20dp"
            android:text="@string/izmeni" />


</LinearLayout>