<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:orientation="vertical">
        <TextView
            style="@style/TextViewStyle"
            android:id="@+id/podaciOPrihoduRashodu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/podaci_o_prihodu_rashodu_podaci" />

        <ImageView
            android:id="@+id/dolarPodaci"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/dolar"
            style="@style/ImageViewStyle"
            />
    </LinearLayout>


       <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            style="@style/TextViewStyle"
            android:id="@+id/naslovPodaci"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:layout_marginLeft="60dp"
            android:textSize="20sp"
            android:text="@string/naslov_podaci"/>
        <TextView
            style="@style/TextViewStyle"
            android:id="@+id/naslovPodaciTekst"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:layout_marginRight="20dp"
            android:textSize="20sp"
           />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            style="@style/TextViewStyle"
            android:id="@+id/kolicinaPodaci"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:layout_marginLeft="60dp"
            android:textSize="20sp"
            android:text="@string/kolicina_podaci"/>
        <TextView
            style="@style/TextViewStyle"
            android:id="@+id/kolicinaPodaciTekst"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:layout_marginRight="20dp"
            android:textSize="20sp"
            />

       </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">
    <TextView
        style="@style/TextViewStyle"
        android:id="@+id/opisPodaci"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="40dp"
        android:layout_marginLeft="60dp"
        android:textSize="20sp"
        android:text="@string/opis_podaci"
        />

    <TextView
        style="@style/TextViewStyle"
        android:id="@+id/opisPodaciTekst"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:textSize="20sp"
        />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/playBtn"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="30dp"
            style="@style/ImageViewStyle"
            android:src="@drawable/play"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/pauseBtn"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/pause"
            style="@style/ImageViewStyle"
            android:visibility="gone" />
    </LinearLayout>


</LinearLayout>