<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        style="@style/TextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="top|center"
        android:layout_marginTop="30dp"
        android:textSize="25sp"
        android:text="Pregled ukupnog stanja racuna"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/prihod"
            android:layout_width="0dp"
            android:textColor="#00FF00"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:layout_marginLeft="60dp"
            android:textSize="20sp"
            android:text="@string/prihod"/>
        <TextView
            android:id="@+id/prihodBroj"
            android:layout_width="0dp"
            android:textColor="#00FF00"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:layout_marginRight="20dp"
            android:textSize="20sp"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/rashod"
            android:layout_width="0dp"
            android:textColor="#FF0000"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:layout_marginLeft="60dp"
            android:textSize="20sp"
            android:text="@string/rashod"/>
        <TextView
            android:id="@+id/rashodBroj"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:textColor="#FF0000"
            android:layout_marginRight="20dp"
            android:textSize="20sp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            style="@style/TextViewStyle"
            android:id="@+id/razlika"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginLeft="60dp"
            android:layout_weight="1"
            android:text="@string/razlika"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/razlikaBroj"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:layout_marginRight="20dp"
            android:textSize="20sp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">
    </LinearLayout>


</LinearLayout>